--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "seed": 116517449,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-22",
-  "seed": 627254603
+  "rate": "3.64",
+  "date": "2025-Dec-22"
 }
