--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 731148657,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2025-Dec-22"
+  "seed": 2036971992,
+  "date": "2025-Dec-22",
+  "rate": "3.64"
 }
