--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1196003291,
   "date": "2025-Dec-22",
-  "seed": 927783916
+  "rate": "3.64"
 }
