--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 458615088
+  "seed": 1794218748,
+  "date": "2025-Dec-22"
 }
