--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1163820839,
-  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-22",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64",
+  "seed": 822479810
 }
