--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 1241491911,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-22"
+  "seed": 1207619946,
+  "date": "2025-Dec-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
