--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 242348680,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 448252829,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
