--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 839617588,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-22",
-  "rate": "3.64"
+  "seed": 3733003
 }
