--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-22",
-  "seed": 3733003
+  "seed": 484621108,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
