--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-26",
-  "rate": "3.64",
+  "seed": 313195831,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 904100943
+  "date": "2025-Dec-26",
+  "rate": "3.64"
 }
