--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 976072240,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1590925189
 }
