--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2025-Dec-26",
-  "seed": 524661656
+  "rate": "3.64",
+  "seed": 1954324877,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
