--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 625162524,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-26",
-  "rate": "3.64",
-  "seed": 1954324877,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
