--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 625162524,
+  "seed": 651554877,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-26",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2025-Dec-26"
 }
