--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-29",
   "rate": "3.64",
-  "seed": 1268757516
+  "seed": 161279736,
+  "date": "2025-Dec-29"
 }
