--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-29",
-  "seed": 654243996,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1278980222,
+  "date": "2025-Dec-29"
 }
