--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-29",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 741519878
+  "rate": "3.64",
+  "seed": 1652891494,
+  "date": "2025-Dec-29"
 }
