--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1652891494,
-  "date": "2025-Dec-29"
+  "date": "2025-Dec-29",
+  "seed": 1356249965,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
