--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "date": "2025-Dec-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 611955037,
-  "date": "2025-Dec-29"
+  "rate": "3.64",
+  "seed": 95332201
 }
