--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Dec-30",
+  "seed": 48075774,
   "rate": "3.64",
-  "seed": 1734838249
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
