--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1859402460,
   "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-30"
+  "date": "2025-Dec-30",
+  "seed": 1357624230
 }
