--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Dec-30",
-  "rate": "3.64",
+  "seed": 1583043371,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1491042137
+  "rate": "3.64"
 }
