--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1614241227,
+  "seed": 826885927,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-30"
+  "date": "2025-Dec-30",
+  "rate": "3.64"
 }
