--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2025-Dec-30",
-  "seed": 2002785366
+  "rate": "3.64",
+  "seed": 923116737,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
