--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1972041299,
+  "seed": 1140539864,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Dec-30"
+  "date": "2025-Dec-30",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
