--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "date": "2025-Dec-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1249694692,
-  "date": "2025-Dec-30"
+  "rate": "3.64",
+  "seed": 1704639909
 }
