--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "date": "2025-Dec-30",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 904116336
+  "seed": 2110166155,
+  "rate": "3.64"
 }
