--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Dec-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 174129359,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1760273155,
+  "date": "2026-Jan-1*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
