--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1436550859,
   "date": "2026-Jan-1*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 629455865
 }
