--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1572423528,
   "date": "2026-Jan-1*",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 629455865
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
