--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1572423528,
   "date": "2026-Jan-1*",
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 199249493,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
