--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1850448059,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2026-Jan-1*"
+  "date": "2026-Jan-1*",
+  "seed": 1362475938,
+  "rate": "3.64"
 }
