--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 22997126,
+  "rate": "3.64",
   "date": "2026-Jan-1*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 855427007,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
