--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1402807078,
   "date": "2026-Jan-1*",
-  "seed": 855427007,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
