--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1402807078,
+  "rate": "3.64",
   "date": "2026-Jan-1*",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1094890358
 }
