--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
   "date": "2026-Jan-1*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1094890358
+  "seed": 867744895,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
