--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-2",
+  "seed": 2049200745,
   "rate": "3.64",
-  "seed": 1875585894
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-2"
 }
