--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2049200745,
+  "date": "2026-Jan-2",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-2"
+  "seed": 492600471,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
