--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-2",
-  "seed": 178095508,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1281956759,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
