--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-2",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 471000024,
   "rate": "3.64",
-  "seed": 1281956759,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2026-Jan-2"
 }
