--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 471000024,
+  "date": "2026-Jan-2",
+  "seed": 242180703,
   "rate": "3.64",
-  "date": "2026-Jan-2"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
