--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-2",
-  "seed": 242180703,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2034273118,
+  "date": "2026-Jan-2"
 }
