--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1117568091,
   "rate": "3.64",
-  "seed": 2034273118,
-  "date": "2026-Jan-2"
+  "date": "2026-Jan-2",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
