--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 302671033,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-5"
+  "date": "2026-Jan-5",
+  "seed": 689043866,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
