--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
   "date": "2026-Jan-5",
-  "seed": 689043866,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 320737912
 }
