--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Jan-5",
-  "seed": 320737912
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1687325131,
+  "date": "2026-Jan-5"
 }
