--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1687325131,
-  "date": "2026-Jan-5"
+  "seed": 2123322659,
+  "date": "2026-Jan-5",
+  "rate": "3.64"
 }
