--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 922386362,
-  "date": "2026-Jan-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 126582199,
+  "date": "2026-Jan-5"
 }
