--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-5",
   "rate": "3.64",
-  "seed": 126582199,
-  "date": "2026-Jan-5"
+  "seed": 478379698,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
