--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 754024446,
-  "date": "2026-Jan-5",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1482585502,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-5"
 }
