--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 147151722,
   "rate": "3.64",
-  "seed": 1482585502,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-5"
+  "date": "2026-Jan-8",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
