--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1541839294,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-8",
-  "rate": "3.64"
+  "seed": 117310861,
+  "rate": "3.64",
+  "date": "2026-Jan-8"
 }
