--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 117310861,
+  "seed": 1204671783,
   "rate": "3.64",
-  "date": "2026-Jan-8"
+  "date": "2026-Jan-8",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
