--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 286474625,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 542236254,
-  "date": "2026-Jan-8",
-  "rate": "3.64"
+  "date": "2026-Jan-8"
 }
