--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-9",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1533576319,
   "rate": "3.64",
-  "seed": 207270743
+  "date": "2026-Jan-9",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
