--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1312467988,
   "date": "2026-Jan-9",
-  "rate": "3.64",
-  "seed": 39797484
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
