--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1312467988,
   "date": "2026-Jan-9",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 341340701,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
