--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-9",
-  "seed": 1320302252,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2026-Jan-9",
+  "seed": 1425773757
 }
