--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Jan-9",
-  "seed": 1425773757
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1608505630,
+  "rate": "3.64"
 }
