--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-9",
+  "rate": null,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1608505630,
-  "rate": "3.64"
+  "seed": 1771979162,
+  "date": ""
 }
