--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": null,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1771979162,
-  "date": ""
+  "rate": "3.64",
+  "date": "2026-Jan-9",
+  "seed": 2097378011
 }
