--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 646335435,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Jan-9",
-  "seed": 2097378011
+  "rate": "3.64"
 }
