--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-9",
-  "seed": 626563083,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Jan-12",
+  "seed": 1573569858
 }
