--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 686066700,
   "rate": "3.64",
-  "seed": 392807279,
-  "date": "2026-Jan-12"
+  "date": "2026-Jan-12",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
