--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Jan-12",
   "rate": "3.64",
-  "seed": 1390507075,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-12"
+  "seed": 633361504
 }
