--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1591052940,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1641506396,
-  "date": "2026-Jan-12",
-  "rate": "3.64"
+  "date": "2026-Jan-13"
 }
