--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 656891707,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Jan-13",
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1996851104,
+  "rate": "3.64"
 }
