--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1116274848,
+  "seed": 1685346434,
   "rate": "3.64",
-  "date": "2026-Jan-14"
+  "date": "2026-Jan-14",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
