--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-14",
   "rate": "3.64",
+  "seed": 150427625,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1426491297
+  "date": "2026-Jan-14"
 }
