--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 652786676,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Jan-14",
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
+  "seed": 170240762
 }
