--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-14",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1722272761,
   "rate": "3.64",
-  "seed": 170240762
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
