--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-14",
-  "seed": 1722272761,
+  "seed": 1351658432,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-14"
 }
