--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1351658432,
   "rate": "3.64",
+  "date": "2026-Jan-14",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-14"
+  "seed": 140800349
 }
