--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2026-Jan-14",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 140800349
+  "rate": "3.64",
+  "seed": 1069527110,
+  "date": "2026-Jan-15"
 }
