--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2026-Jan-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2100418496
+  "rate": "3.64",
+  "seed": 2112838342,
+  "date": "2026-Jan-15"
 }
