--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Jan-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 2112838342,
-  "date": "2026-Jan-15"
+  "seed": 902086474
 }
