--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Jan-15",
-  "seed": 886060361
+  "seed": 545115413,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
