--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "date": "2026-Jan-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 62635019,
-  "date": "2026-Jan-15"
+  "seed": 1470744398,
+  "rate": "3.64"
 }
