--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 157802224,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Jan-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1254901847,
+  "date": "2026-Jan-15"
 }
