--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1167798742,
   "date": "2026-Jan-15",
-  "rate": "3.64",
-  "seed": 515898827,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
