--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 991227512,
-  "rate": "3.64",
   "date": "2026-Jan-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 686224711,
+  "rate": "3.64"
 }
