--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Jan-15",
   "rate": "3.64",
-  "seed": 853326200,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-15"
+  "seed": 1101155121
 }
