--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 705599526,
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-15"
+  "seed": 1827122213,
+  "date": "2026-Jan-19*",
+  "rate": "3.64"
 }
