--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.64",
+  "seed": 1558856438,
   "date": "2026-Jan-19*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1766595476,
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
