--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
   "date": "2026-Jan-19*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1574298562
+  "seed": 919183386,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
