--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 561208390,
   "date": "2026-Jan-19*",
-  "rate": "3.64",
-  "seed": 597360904,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64"
 }
