--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 889120189,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 561208390,
-  "date": "2026-Jan-19*",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Jan-19*"
 }
