--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 889120189,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Jan-19*"
+  "date": "2026-Jan-19*",
+  "seed": 1524677865
 }
