--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Jan-19*",
-  "seed": 1002600208
+  "rate": "3.64",
+  "seed": 1554679161,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
