--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-19*",
   "rate": "3.64",
-  "seed": 1554679161,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1668029734,
+  "date": "2026-Jan-20"
 }
