--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1668029734,
-  "date": "2026-Jan-20"
+  "seed": 709446746,
+  "date": "2026-Jan-20",
+  "rate": "3.64"
 }
