--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 709446746,
   "date": "2026-Jan-20",
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1449242139,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
