--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1569642086,
-  "date": "2026-Jan-20"
+  "date": "2026-Jan-20",
+  "seed": 1194704050
 }
