--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 441788462,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
   "date": "2026-Jan-20",
-  "seed": 1194704050
+  "rate": "3.64"
 }
