--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 370986647,
-  "rate": "3.64",
+  "date": "2026-Jan-20",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-20"
+  "seed": 1868383813,
+  "rate": "3.64"
 }
