--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "3.64",
+  "seed": 171347537,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-20",
-  "seed": 657110291,
-  "rate": "3.64"
+  "date": "2026-Jan-20"
 }
