--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 602238428,
-  "date": "2026-Jan-21",
+  "rate": "3.64",
+  "seed": 248271280,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Jan-21"
 }
