--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1036289784,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-21",
   "rate": "3.64",
-  "date": "2026-Jan-21"
+  "seed": 190206113
 }
