--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2126201946,
   "date": "2026-Jan-21",
   "rate": "3.64",
-  "seed": 190206113
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
