--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 610978200,
-  "date": "2026-Jan-21"
+  "date": "2026-Jan-21",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1720633983
 }
