--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
   "date": "2026-Jan-21",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1720633983
+  "seed": 1277208773,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
