--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "date": "2026-Jan-21",
-  "seed": 1277208773,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 674184747
 }
