--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-21",
-  "rate": "3.64",
+  "seed": 591518478,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 674184747
+  "rate": "3.64"
 }
