--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-21",
-  "seed": 591518478,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 57755856,
+  "date": "2026-Jan-22",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
