--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 306404619,
+  "date": "2026-Jan-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-22"
+  "seed": 525061259
 }
