--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "seed": 12278739,
   "date": "2026-Jan-22",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 525061259
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
