--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-22",
   "rate": "3.64",
-  "seed": 625495486,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1981167983,
+  "date": "2026-Jan-22"
 }
