--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 469191738,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-22",
   "rate": "3.64",
-  "date": "2026-Jan-22"
+  "seed": 885366047
 }
