--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Jan-22",
-  "rate": "3.64",
-  "seed": 885366047
+  "seed": 1470230050,
+  "rate": "3.64"
 }
