--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Jan-23",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-22",
-  "seed": 1470230050,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 435142256
 }
