--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1269425275,
   "date": "2026-Jan-23",
-  "rate": "3.64"
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2075387526
 }
