--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-23",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2075387526
+  "date": "2026-Jan-23",
+  "seed": 1049624272,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
