--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-23",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1260635634,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 247718470,
+  "date": "2026-Jan-23"
 }
