--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1263718666,
+  "date": "2026-Jan-23",
   "rate": "3.64",
-  "seed": 247718470,
-  "date": "2026-Jan-23"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
