--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-23",
-  "rate": "3.64",
-  "seed": 1325926351,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 207234620,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
