--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-23",
-  "seed": 207234620,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 1528898343,
+  "date": "2026-Jan-23"
 }
