--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1301504339,
-  "date": "2026-Jan-26"
+  "date": "2026-Jan-26",
+  "seed": 1340339359,
+  "rate": "3.64"
 }
