--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Jan-26",
-  "seed": 1340339359,
-  "rate": "3.64"
+  "seed": 1540585943,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
