--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-26",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 586306682
+  "seed": 317095656,
+  "rate": "3.64",
+  "date": "2026-Jan-26"
 }
