--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 317095656,
   "rate": "3.64",
-  "date": "2026-Jan-26"
+  "date": "2026-Jan-26",
+  "seed": 1633431879,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
