--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1252812296,
-  "date": "2026-Jan-26",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Jan-26",
+  "seed": 41564137
 }
