--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-26",
-  "seed": 1978997312
+  "seed": 1339322563,
+  "date": "2026-Jan-26"
 }
