--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
+  "date": "2026-Jan-27",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1339322563,
-  "date": "2026-Jan-26"
+  "rate": "3.64",
+  "seed": 388330846
 }
