--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1719826180,
   "date": "2026-Jan-27",
-  "seed": 1408686833
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
