--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-27",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1222167871,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1115754947
 }
