--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1456565805,
   "date": "2026-Jan-27",
   "rate": "3.64",
-  "seed": 1872069213
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
