--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1456565805,
-  "date": "2026-Jan-27",
+  "seed": 2035480718,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-27"
 }
