--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1312065909,
-  "date": "2026-Jan-27",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "seed": 386847341,
+  "rate": "3.64",
+  "date": "2026-Jan-28",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
