--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1076971439,
-  "rate": "3.64",
+  "date": "2026-Jan-28",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-28"
+  "seed": 1338910601,
+  "rate": "3.64"
 }
