--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
   "date": "2026-Jan-28",
-  "seed": 178754122
+  "seed": 1897402664,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
