--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-28",
-  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1080469658
+  "seed": 1739765362,
+  "rate": "3.64",
+  "date": "2026-Jan-29"
 }
