--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 586895697,
+  "date": "2026-Jan-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1739765362,
-  "rate": "3.64",
-  "date": "2026-Jan-29"
+  "rate": "3.64"
 }
