--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "seed": 401377601,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-29"
+  "date": "2026-Jan-29",
+  "seed": 299099011,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
