--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-29",
-  "seed": 1058755639,
+  "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "date": "2026-Jan-29",
+  "seed": 992512184
 }
