--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Jan-29",
-  "seed": 992512184
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 394940701,
+  "rate": "3.64"
 }
