--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Jan-29",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 394940701,
-  "rate": "3.64"
+  "date": "2026-Jan-29",
+  "rate": "3.64",
+  "seed": 232474973
 }
