--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-29",
+  "seed": 145679228,
   "rate": "3.64",
-  "seed": 232474973
+  "date": "2026-Jan-29",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
