--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 145679228,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 448211771,
   "rate": "3.64",
-  "date": "2026-Jan-29",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2026-Jan-29"
 }
