--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 448211771,
+  "seed": 693985882,
   "rate": "3.64",
-  "date": "2026-Jan-29"
+  "date": "2026-Jan-29",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
