--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 693985882,
-  "rate": "3.64",
-  "date": "2026-Jan-29",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1591425876,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Jan-30",
+  "rate": "3.64"
 }
