--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 205937723,
+  "date": "2026-Jan-30",
   "rate": "3.64",
-  "date": "2026-Jan-30"
+  "seed": 1830654718,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
