--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Jan-30",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1830654718,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1577319466
 }
