--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 972026002,
   "date": "2026-Jan-30",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1577319466
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
