--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 972026002,
+  "seed": 996417566,
   "date": "2026-Jan-30",
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
