--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Jan-30",
-  "seed": 1428683799,
-  "rate": "3.64"
+  "rate": "3.64",
+  "seed": 1719449276,
+  "date": "2026-Jan-30"
 }
