--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 315511534,
+  "seed": 1357115605,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2026-Feb-2"
+  "date": "2026-Feb-2",
+  "rate": "3.64"
 }
