--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-2",
-  "seed": 1220545502
+  "seed": 2071831612,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
