--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-2",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 307589146,
-  "rate": "3.64"
+  "seed": 2100368532,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
