--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-2",
-  "seed": 2100368532,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 661941938
 }
