--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-2",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "seed": 661941938
+  "date": "2026-Feb-2",
+  "seed": 1980934329,
+  "rate": "3.64"
 }
