--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1090072677,
+  "date": "2026-Feb-2",
   "rate": "3.64",
-  "date": "2026-Feb-2"
+  "seed": 947649019
 }
