--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-2",
   "rate": "3.64",
-  "seed": 947649019
+  "date": "2026-Feb-2",
+  "seed": 1051128603,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
