--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-3",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 1432984686
+  "date": "2026-Feb-3",
+  "seed": 2000690017,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
