--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 2097216345,
   "rate": "3.64",
-  "date": "2026-Feb-3",
-  "seed": 2000690017,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2026-Feb-3"
 }
