--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 936841735,
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-3"
+  "seed": 63690534,
+  "date": "2026-Feb-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
