--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 63690534,
   "date": "2026-Feb-3",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 427016837,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64"
 }
