--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1565723410,
+  "seed": 58007985,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "date": "2026-Feb-3"
+  "date": "2026-Feb-3",
+  "rate": "3.64"
 }
