--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-3",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 97950482
+  "seed": 2137199906,
+  "date": "2026-Feb-3",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
