--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2026-Feb-4",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1495192221,
-  "rate": "3.64"
+  "seed": 1365768979,
+  "rate": "3.64",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
