--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-4",
+  "seed": 1876936982,
   "rate": "3.64",
-  "seed": 1745267509
+  "date": "2026-Feb-4"
 }
