--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Feb-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1876936982,
   "rate": "3.64",
-  "date": "2026-Feb-4"
+  "seed": 916804248
 }
