--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-4",
+  "seed": 597840485,
   "rate": "3.64",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 298043232
+  "date": "2026-Feb-4"
 }
