--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 597840485,
-  "rate": "3.64",
+  "seed": 177328531,
+  "date": "2026-Feb-4",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2026-Feb-4"
+  "rate": "3.64"
 }
