--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 177328531,
-  "date": "2026-Feb-4",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64"
+  "rate": "3.64",
+  "date": "2026-Feb-5",
+  "seed": 2071097478,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
