--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2026-Feb-5",
+  "seed": 1473749140,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "3.64",
-  "seed": 106954568,
-  "date": "2026-Feb-5"
+  "rate": "3.64"
 }
