--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 628954683,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "date": "2026-Feb-5"
+  "seed": 613727395,
+  "date": "2026-Feb-5",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
