--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1885240966,
-  "date": "2026-Feb-5"
+  "seed": 1857452893,
+  "date": "2026-Feb-6",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
