--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "seed": 1857452893,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-6",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1197900055,
+  "rate": "3.64"
 }
