--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "3.64",
+  "seed": 977438820,
   "date": "2026-Feb-6",
-  "seed": 1197900055,
-  "rate": "3.64"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
