--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-6",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "3.64",
-  "seed": 278546589
+  "date": "2026-Feb-6",
+  "seed": 1056066355,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
