--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "3.64",
-  "date": "2026-Feb-6",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 394404674
+  "seed": 716486034,
+  "date": "2026-Feb-6",
+  "rate": "3.64"
 }
