--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-9",
+  "rate": "3.64",
+  "seed": 1063970946,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1607160831,
-  "rate": "3.64"
+  "date": "2026-Feb-9"
 }
