--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1582759852,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2026-Feb-9",
   "rate": "3.64",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2060135437
 }
