--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2026-Feb-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1604698756,
-  "rate": "3.64"
+  "seed": 1968003921,
+  "rate": "3.64",
+  "date": "2026-Feb-9"
 }
